channels/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: channels-dvr

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: channels
      app.kubernetes.io/instance: channels
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: channels
        app.kubernetes.io/instance: channels
    spec:
      hostname: channels
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: channels
        image: fancybits/channels-dvr:tve
        imagePullPolicy: Always

#        command: ['sleep', 'infinity']
        volumeMounts:
        - mountPath: /channels-dvr
          name: config
        - mountPath: /recordings
          name: recordings
        - name: dev-dri
          mountPath: /dev/dri
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: channels-config
      - nfs:
          server: fs2.oneill.net
          path: /volume2/shared/video/channels
        name: recordings
      - name: dev-dri
        hostPath:
          path: /dev/dri
