channels/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: channels
  annotations:
    metallb.io/allow-shared-ip: channels

spec:
  type: LoadBalancer
  ports:
  - port: 8089
    targetPort: 8089
    protocol: TCP
  selector:
    app.kubernetes.io/name: channels
    app.kubernetes.io/instance: channels
