channels/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: channels
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Channels
    gethomepage.dev/description: Channels DVR
    gethomepage.dev/group: Media
    gethomepage.dev/icon: channels-dvr.png
spec:
  tls:
  - hosts:
    - channels.k.oneill.net
    secretName: channels-tls
  rules:
  - host: channels.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: channels
            port:
              number: 8089
